--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "axios": "^0.26.1",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
@@ -23,6 +26,7 @@
     "@types/react-dom": "18.0.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
+    "sass": "^1.50.0",
     "typescript": "4.6.3"
   }
 }
