--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-toastify": "^9.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
