--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "axios": "^0.26.1",
+    "cookie": "^0.5.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "next": "12.1.4",
+    "next-i18next": "^12.0.0",
     "react": "18.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
+    "react-icons": "^4.4.0",
     "react-toastify": "^9.0.5"
   },
   "devDependencies": {
